tests/test_proof/bad/structs-empty.catala_en
## Test

```catala
declaration structure T:
   data c content boolean
   data d content integer

declaration structure S:
    data a content integer
    data b content T

declaration scope A:
  output x content integer
  internal y content S

scope A:
  definition y equals S { -- a : 0 -- b : T { -- c : false -- d: 0}}
  definition x under condition (y.a = 0) and y.b.c consequence equals 0
  definition x under condition not (y.a = 0) consequence equals 1
```

```catala-test-inline
$ catala Proof --disable_counterexamples 
[WARNING] [A.x] This variable might return an empty error:
┌─⯈ tests/test_proof/bad/structs-empty.catala_en:13.10-13.11:
└──┐
13 │   output x content integer
   │          ‾
   └─ Test
Counterexample generation is disabled so none was generated.
```
